<resources>
    <string name="app_name">Baby-d</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Last_name">Last name</string>
    <string name="First_name">First name</string>
    <string name="Submit">Submit</string>
    <string name="AddBabyBtn">Add Baby</string>
    <string name="BabyLastName">Baby Last Name</string>
    <string name="BabyFirstName">Baby First Name</string>
    <string name="FeedType">Feed Type</string>
    <string name="BabyWeight">Baby Weight </string>
    <string name="BabyBirthDay">Baby Birth Day</string>
    <string name="currentWeight">Current weight:</string>
    <string name="babyInfo">Baby Info</string>
    <string name="LoginTitle">Baby-D Login</string>
    <string name="WelcomeTitle">Baby-D Welcome</string>
    <string name="RegisterTitle">Baby-D Register</string>
    <string name="AddBabyTitle">Baby-D Add Baby</string>
    <string name="BabyInfoTitle">Baby-D Baby Info</string>
    <string name="setBabyWeight">Change weight</string>
    <string name="Set_new_baby_weight">Set new baby weight?</string>
    <string name="weight">Weight</string>
    <string name="setDiaper">Set Diaper</string>
    <string name="helloBaby">Hello</string>
    <string name="Diaper">Diaper</string>
    <string name="fake">fake</string>
    <string name="wetDiaper">Wet diapers:</string>
    <string name="dirtyDiaper">Dirty diapers:</string>
    <string name="AddDiaperRecord">Add Diaper Record</string>
    <string name="wet">Wet</string>
    <string name="dirty">Dirty</string>
    <string name="addSleepingTime">Add sleeping time</string>
    <string name="addSleep">How much time the baby sleep?</string>
    <string name="addSleepBtn">Add Sleep</string>
    <string name="addEatFormulaRecord">Add baby eat formula record</string>
    <string name="addEatBreastRecord">Add baby eat formula record</string>
    <string name="Formula">Formula</string>
    <string name="breast">breast feed</string>
    <string name="amount">How much formula?</string>
    <string name="breast_side">Breast side</string>
    <string name="pumpTime">Feeding time</string>
    <string name="Phone">Phone</string>

    <string-array name="Feed_Array">
        <item>Breast Feeding</item>
        <item>Formula</item>
        <item>Combined</item>
    </string-array>

    <string-array name="babySections">
        <item>Current Weight</item>
        <item>Diaper</item>
        <item>Eating</item>
        <item>Sleeping</item>
    </string-array>
</resources>