<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.BabyEat"
    android:background="@color/colorAccent"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/Formula"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/formulaText"
        />
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eatFormulaListView"
        android:layout_below="@id/formulaText"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/addEatFormulaRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/eatFormulaListView"
        android:text="@string/addEatFormulaRecord"
        android:layout_margin="20dp"
        android:padding="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addEatFormulaRecord"
        android:text="@string/breast"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/breastFeed"
        />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eatBreastListView"
        android:layout_below="@id/breastFeed"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/addEatBreastRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/eatBreastListView"
        android:text="@string/addEatBreastRecord"
        android:layout_margin="20dp"
        android:padding="15dp"/>

</RelativeLayout>