<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.BabyDiaper"
    android:background="@color/colorAccent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/wetLayout">

        <TextView
            android:id="@+id/wetDiaperTextKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:text="@string/wetDiaper"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wetDiaperTextValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:text="@string/fake"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wetLayout">

        <TextView
            android:id="@+id/dirtyDiaperTextKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:text="@string/dirtyDiaper"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dirtyDiaperTextValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:text="@string/fake"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <Button
            android:id="@+id/AddDiaperRecordBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AddDiaperRecord"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:textSize="24sp"
            />
    </RelativeLayout>


</RelativeLayout>